exec plugin args to run on travis